<resources>
    <string name="app_name">WallPrompt</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="generate">Generate</string>
    <string name="doubleWallpaper">Double</string>
    <string name="wallpaper_image">Wallpaper image</string>
    <string name="fullscreen_imageview">Fullscreen ImageView</string>
    <string name="download">Download</string>
    <string name="set_as_home_screen">Set as Home Screen</string>
    <string name="set_as_lock_screen">Set as Lock Screen</string>
    <string name="save_to_device">Save to Device</string>
    <string name="wallpaper_in_fullscreen">Wallpaper in fullscreen</string>
    <string name="category_thumbnail">Category Thumbnail</string>
    <string name="nature">Nature</string>
    <string name="inside_category_wallpaper">Inside Category Wallpaper</string>
    <string name="lock_screen_image">Lock screen image</string>
    <string name="home_screen_image">Home screen image</string>
    <string name="double_rewarded_lock">Double rewarded lock</string>
    <string name="download_both_wallpapers">Download Both Wallpapers</string>
    <string name="describe_your_wallpaper">Describe your Wallpaper...</string>
    <string name="generate_wallpaper">Generate Wallpaper</string>
    <string name="generate_wallpaper_with_limit">Generate Wallpaper (%1$d left today)</string>
    <string name="generated_image_view">Generated Image View</string>
    <string name="back_arrow">Back arrow</string>
    <string name="fuel_the_art_type_your_vision">Fuel the art.\n Type your vision✨</string>
    <string name="brewing_your_visual_masterpiece">Crafting your visual magic… please wait.</string>
    <string name="settings">Settings</string>
    <string name="resolution">Resolution</string>
    <string name="image_style">Image Style</string>
    <string name="aspect_ratio">Aspect Ratio</string>
    <string name="legal_info"><![CDATA[📜 Legal & Info]]></string>
    <string name="privacy_policy">📋 Privacy Policy</string>
    <string name="eula">📄 EULA</string>
    <string name="app_version">📱 App Version</string>
    <string name="rate_us">⭐ Rate Us</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="image_generation_settings">🖼 Image Generation Settings</string>
    <string name="enter_your_prompt">Enter your prompt...</string>
    <string name="loading_ai_image">Loading AI image</string>
    <string name="profile">🧑‍💼 Profile</string>
    <string name="email_label">Email: %1$s</string>
    <string name="email_placeholder">Email placeholder</string>
    <string name="email_user_example_com">Email: user@example.com</string>
    <string name="log_out">Log Out</string>
    <string name="login_screen_placeholder">Login Screen Placeholder</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="no_account_signup">No account? Signup!</string>
    <string name="let_s_set_up_your_profile">Let\'s set-up your Profile.</string>
    <string name="generated_prompt">Generated Prompt</string>
    <string name="generated_image">Generated Image</string>
    <string name="no_generated_images">No generated images</string>
    <string name="generate_images_to_see_them_here">Generate images to see them here</string>
    <string name="error_empty_fields">Please enter both email and password.</string>
    <string name="login_success">You are now logged in ✅</string>
    <string name="login_failed">Login failed: %1$s</string>
    <string name="signup_success">Signup successful 🎉</string>
    <string name="signup_failed">Signup failed: %1$s</string>
    <string name="close">Close</string>
    <string name="continue_without_premium">Continue without premium</string>
    <string name="buy_premium">Buy Premium</string>
    <string name="go_premium">Go Premium</string>
    <string name="premium_icon">Premium Icon</string>
    <string name="premium">⚜️ Premium</string>
    <string name="cancel_subscription">🚫 Cancel Subscription</string>
    <string name="get_started">Get Started</string>
    <string name="next">Next</string>
    <string name="explore_wallpapers">Explore Wallpapers</string>
    <string name="wallpaper_types">Wallpaper Types</string>
    <string name="ai_generator">AI Generator</string>
    <string name="ai_wallpaper_maker">AI Wallpaper Generator</string>
    <string name="let_s_begin">Let\'s Begin</string>
    <string name="app_logo">App Logo</string>
    <string name="welcome_to_wallprompt">Welcome To WallPrompt</string>
    <string name="let_s_dive_in">Let\'s Dive In.</string>
    <string name="bring_your_imagination_to_life_with_stunning_wallpapers_customize_styles_resolution_and_screen_fit_your_way">Bring your imagination to life with stunning wallpapers. Customize styles, resolution, and screen fit — your way.</string>
    <string name="free_and_rewarded_wallpapers_4k_combos_smart_categories_and_the_magic_of_ai_wallpaper_generation_all_in_one_place">Free and rewarded wallpapers, 4K combos, smart categories, and the magic of AI wallpaper generation — all in one place.</string>
    <string name="fragment_background">Fragment Background</string>
    <string name="note_2_generations_in_24_hours">Note: 2 generations in 24 hours. Subscribe to Premium.</string>
    <string name="terms_of_service">📜 Terms of Service</string>
    <string name="contact_us">☎️ Contact Us</string>
    <string name="unlock_unlimited_generations_ad_free_experience_nand_seemless_usage">Enjoy 10 high-quality image generations every day,\n an ad-free experience, and seamless,\n uninterrupted usage.</string>
    <string name="report_content">Report content</string>
    <string name="submit">Submit</string>
    <string name="optional_details_what_s_wrong">Optional details (what’s wrong?)</string>
    <string name="i_agree">I agree</string>
    <string name="continue_1">Continue</string>
    <string name="no_sexual_content_especially_involving_minors_n_no_hate_or_harassment_n_no_explicit_violence_or_gore_n_no_child_exploitation_endangerment_or_sexualization_n_no_illegal_or_ip_infringing_content_n_nby_proceeding_you_agree_to_follow_these_rules">- No sexual content (especially involving minors)\n- No hate or harassment\n- No explicit violence or gore\n- No child exploitation, endangerment or sexualization\n- No illegal or IP-infringing content\n\nBy proceeding you agree to follow these rules.</string>
    <string name="community_guidelines">Community Guidelines</string>
    <string name="ai_generated_images">AI Generated Images</string>
    <string name="submit_amp_delete"><![CDATA[Submit & Delete]]></string>
    <string name="report_delete_warning">The generated image and the prompt will be deleted!!</string>
    <string name="details_optional">Details (Optional)</string>
    <string name="reason">Reason</string>
    <string name="ai_generation_policy">🏛️ AI Generation Policy</string>
    <string name="ai_image_generation_policy">AI Image Generation Policy</string>
    <string name="to_keep_wallprompt_safe_and_compliant_with_google_play_policies_your_prompts_and_generated_images_must_follow_these_rules">To keep WallPrompt safe and compliant with Google Play policies, your prompts and generated images must follow these rules.</string>
    <string name="what_s_not_allowed">What’s Not Allowed</string>
    <string name="sexual_content_nudity_or_erotic_imagery_n_any_sexual_content_involving_minors_words_like_sex_sexual_nude_pornography_child_minor_underage_incest_rape_and_similar_are_blocked_n_harassment_hate_speech_or_discrimination_against_protected_groups_n_graphic_violence_self_harm_or_instructions_to_cause_harm_n_illegal_activities_weapons_drugs_human_exploitation_or_dangerous_content_n_faces_or_identities_of_real_people_without_consent_deepfakes_or_public_figures_in_sensitive_contexts_n_copyright_infringement_or_misuse_of_trademarks_logos">• Sexual content, nudity, or erotic imagery.\n • Any sexual content involving minors: words like “sex”, “sexual”, “nude”, “pornography”, “child”, “minor”, “underage”, “incest”, “rape” and similar are blocked.\n • Harassment, hate speech, or discrimination against protected groups.\n • Graphic violence, self-harm, or instructions to cause harm.\n • Illegal activities (weapons, drugs, human exploitation) or dangerous content.\n • Faces or identities of real people without consent (deepfakes), or public figures in sensitive contexts.\n • Copyright infringement or misuse of trademarks/logos.</string>
    <string name="moderation_amp_blocking_n_prompts_are_automatically_checked_and_may_be_blocked_with_a_short_explanation_n_repeated_attempts_to_bypass_filters_may_limit_access_to_generation"><![CDATA[Moderation & Blocking\n • Prompts are automatically checked and may be blocked with a short explanation.\n • Repeated attempts to bypass filters may limit access to generation.]]></string>
    <string name="reporting_amp_removal_n_a_flag_icon_appears_on_top_of_every_generated_image_tap_it_to_report_and_request_deletion_n_the_same_flag_is_available_in_your_generated_images_history_n_reported_items_are_reviewed_and_removed_repeat_abuse_can_lead_to_restrictions"><![CDATA[Reporting & Removal\n • A flag icon appears on top of every generated image—tap it to report and request deletion.\n • The same flag is available in your Generated Images history, Homescreen images, inside categories and doublewallpapers.\n • No login required.\n • Reported items are reviewed and removed; repeat abuse can lead to restrictions.]]></string>
    <string name="data_amp_privacy_n_we_may_keep_minimal_logs_prompt_text_timestamps_and_report_metadata_to_enforce_these_rules_and_comply_with_policies_n_see_our_privacy_policy_for_details"><![CDATA[Data & Privacy\n • We may keep minimal logs (prompt text, timestamps, and report metadata) to enforce these rules and comply with policies.\n • See our Privacy Policy for details.]]></string>
    <string name="i_understand_and_agree_to_the_image_generation_policy">I understand and agree to the Image Generation Policy</string>
    <string name="continues">Continue</string>
    <string name="learn_more_in_our_ai_content_policy_and_privacy_policy">Learn more in our AI Content Policy and Privacy Policy.</string>
    <string name="we_will_review_the_report_and_fix_it_soon">We will review the report and fix it soon .</string>
    <string name="welcome_subtitle">Curated wallpapers &amp; AI-crafted visuals.</string>
    <string name="free_and_rewarded_wallpapers_smart_categories_and_ai_generation_all_in_one_place">Free and rewarded wallpapers, 4K pairs, smart categories — powered by AI.</string>
    <string name="describe_an_idea_pick_a_style_and_generate_a_wallpaper_made_for_your_screen">Describe an idea, pick a style, and generate a wallpaper made for your screen.</string>
    <string name="lets_dive_in">Let’s dive in</string>
    <string name="onboarding_final_subtitle">Choose a wallpaper, generate your own, and make your screen feel new.</string>



</resources>