<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.ams.wallverse.HomeFragment"
        android:label="@string/home" />

    <fragment
        android:id="@+id/categoriesFragment"
        android:name="com.ams.wallverse.CategoriesFragment"
        android:label="@string/categories" />

    <fragment
        android:id="@+id/doubleWallpaperFragment"
        android:name="com.ams.wallverse.DoubleWallpaperFragment"
        android:label="@string/doubleWallpaper" />

    <fragment
        android:id="@+id/generateFragment"
        android:name="com.ams.wallverse.GenerateFragment"
        android:label="@string/generate" />
</navigation>