<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menuLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/popup_setting_background"
    android:padding="12dp">

    <TextView
        android:id="@+id/itemGeneration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_generation_settings"
        android:textColor="#000000"
        android:textSize="16sp"
        android:padding="8dp" />

    <TextView
        android:id="@+id/itemLegal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/legal_info"
        android:textColor="#000000"
        android:textSize="16sp"
        android:padding="8dp" />

    <TextView
        android:id="@+id/itemProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textColor="#000000"
        android:textSize="16sp"
        android:padding="8dp" />

    <TextView
        android:id="@+id/itemPremium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/premium"
        android:textSize="16sp"
        android:padding="8dp"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/itemCancelPremium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_subscription"
        android:textSize="16sp"
        android:padding="8dp"
        android:textColor="#000000" />

</LinearLayout>
